--- a/app/src/main/res/layout/activity_movie_category.xml
+++ b/app/src/main/res/layout/activity_movie_category.xml
@@ -36,7 +36,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcvCities"
+        android:id="@+id/rcvCategories"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
