--- a/app/src/main/res/layout/adapter_movie.xml
+++ b/app/src/main/res/layout/adapter_movie.xml
@@ -44,10 +44,16 @@
 
         <TextView
             android:id="@+id/txtRate"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:textSize="@dimen/label"
             android:text="Classificação"/>
+
+        <CheckBox
+            android:id="@+id/checkboxWatched"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
